# rust-text-analyzer

./: .gitignore  Cargo.toml  README.md  analyser.txt  programming_tips.txt  rust_benefits.txt  stop_words_french.txt
src/: api.rs  config.rs  html_analyzer.rs  lib.rs  main.rs  search_crawler.rs  tests.rs  text_analyzer.rs  web_analyzer.rs
