[package]
name = "rust-text-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
scraper = "0.17.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4.5.0"
env_logger = "0.10.0"
